@@ -40,6 +40,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 -@ ``Screen``: allow `gui/launcher` and `gui/quickcmd` to launch themselves without hanging the game
 -@ Fix issues with clicks "passing through" some DFHack window elements, like scrollbars
 - `getplants`: tree are now designated correctly
+- `autoclothing`: fixed a crash that can happen when units are holding invalid items.
 
 ## Misc Improvements
 - A new cross-compile build script was added for building the Windows files from a Linux Docker builder (see the Compile instructions in the docs)
@@ -52,6 +53,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `overlay`: overlay widgets can now specify a default enabled state if they are not already set in the player's overlay config file
 - `getplants`: ID values will now be accepted regardless of case
 -@ New borders for DFHack tool windows -- tell us what you think!
+- `autoclothing`: merged the two separate reports into the same command.
 
 ## Documentation
 
